--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
 # Core MCP and Kafka dependencies
-mcp[cli]==1.9.2
-fastmcp==2.8.0
-confluent-kafka==2.6.1
+mcp[cli]>=1.9.2,<2.0.0
+fastmcp>=2.8.0,<3.0.0
+confluent-kafka>=2.6.0,<3.0.0
 
 # Utilities
-pydantic==2.9.2
-python-json-logger==2.0.7
+pydantic>=2.9.0,<3.0.0
+python-json-logger>=2.0.7,<3.0.0
 
 # Authentication (optional)
-authlib==1.3.2
-httpx==0.27.2
+authlib>=1.5.2,<2.0.0
+httpx>=0.28.1,<1.0.0
 
 # Development and testing
-pytest==8.3.3
-pytest-asyncio==0.25.0
-pytest-mock==3.14.0
+pytest>=8.3.0,<9.0.0
+pytest-asyncio>=0.25.0,<1.0.0
+pytest-mock>=3.14.0,<4.0.0
 
 # Logging and monitoring
-structlog==24.4.0
+structlog>=24.4.0,<25.0.0
