Fix Black formatting CI check to match pyproject.toml configuration (#4)
* Fix Black formatting CI check to match pyproject.toml configuration

- Update CI to only check main module and scripts directory
- Exclude tests directory from Black formatting check (as configured in pyproject.toml)
- Add format_all_code.sh script for formatting everything including tests

* Refactor code formatting for consistency and readability

- Apply Black formatting to `kafka_brokers_unified_mcp.py` and `create_test_data.py`
- Standardize string quotes to double quotes
- Consolidate line breaks and whitespace for improved clarity
- Update `fix_formatting.sh` script permissions to executable
- Ensure consistent formatting in `test_mcp_tools.py` and other scripts

* Enhance Docker Compose integration in CI and test scripts

- Add steps to set up Docker Compose in CI workflow for testing environments
- Implement a function to determine the appropriate Docker Compose command in test scripts
- Update all relevant scripts to use the determined Docker Compose command for consistency
- Create a new utility module for running Docker Compose commands in tests

* Remove deprecated Docker Compose files and update test scripts for new configuration

- Delete old docker-compose.yml and docker-compose.test.yml files
- Introduce a new docker-compose.yml for testing with multiple Kafka clusters
- Update test scripts to reference the new Docker Compose configuration
- Enhance test environment setup and teardown scripts for improved clarity and functionality

* Enhance CI workflow with security permissions and update SARIF upload action

- Add permissions for security events, actions, and contents in the CI workflow
- Update the SARIF upload action from v2 to v3 for improved functionality

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,8 @@ jobs:
     
     - name: Check code formatting with black
       run: |
-        black --check --diff . || (echo "Code formatting issues found. Run 'black .' to fix." && exit 1)
+        # Only check the main module and scripts directory, excluding tests as per pyproject.toml
+        black --check --diff kafka_brokers_unified_mcp.py scripts/ || (echo "Code formatting issues found. Run 'black kafka_brokers_unified_mcp.py scripts/' to fix." && exit 1)
     
     - name: Type checking with mypy
       run: |
@@ -60,6 +61,11 @@ jobs:
     - name: Fix script permissions
       run: |
         chmod +x tests/*.sh scripts/*.sh || true
+    
+    - name: Setup Docker Compose
+      run: |
+        # Ensure docker compose is available (V2)
+        docker compose version || (echo "Installing docker-compose" && sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && sudo chmod +x /usr/local/bin/docker-compose)
     
     - name: Start test environment
       run: |
@@ -94,6 +100,10 @@ jobs:
 
   security-scan:
     runs-on: ubuntu-latest
+    permissions:
+      security-events: write
+      actions: read
+      contents: read
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -107,7 +117,7 @@ jobs:
         output: 'trivy-results.sarif'
     
     - name: Upload Trivy scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@v2
+      uses: github/codeql-action/upload-sarif@v3
       if: always()
       with:
         sarif_file: 'trivy-results.sarif'
@@ -243,6 +253,11 @@ jobs:
     - name: Fix script permissions
       run: |
         chmod +x tests/*.sh scripts/*.sh || true
+    
+    - name: Setup Docker Compose for integration tests
+      run: |
+        # Ensure docker compose is available (V2)
+        docker compose version || (echo "Installing docker-compose" && sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && sudo chmod +x /usr/local/bin/docker-compose)
     
     - name: Test latest Docker image
       run: |
