--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -195,6 +195,10 @@ services:
       VIEWONLY_1: "false"
       VIEWONLY_2: "false"
       PYTHONPATH: "/app"
+      # Ensure the MCP server stays running for readiness checks
+      MCP_TRANSPORT: "http"
+      MCP_SERVER_HOST: "0.0.0.0"
+      MCP_SERVER_PORT: "8000"
     working_dir: /app
     command: ["python", "kafka_brokers_unified_mcp.py"]
     networks:
